# HEMCO

./: CMakeLists.txt
.github/workflows/: sync_main.yml
CMakeScripts/: FindESMF.cmake
run/: HEMCO_Config.rc.nuopc  HEMCO_NUOPC.rc  HEMCO_NUOPC.rc.sample  runHEMCO_ESMX.sh  runHEMCO_NUOPC.sh
run/esmx/: hemco_esmx.yaml
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  hco_config_mod.F90  hco_error_mod.F90  hco_esmf_regrid_mod.F90  hco_filedata_mod.F90  hco_geotools_mod.F90  hco_restart_mod.F90  hco_state_mod.F90  hco_types_mod.F90  hcoio_diagn_mod.F90  hcoio_interface_mod.F90  hcoio_read_esmf_mod.F90  hcoio_read_mapl_mod.F90  hcoio_write_esmf_mod.F90  hcoio_write_mapl_mod.F90
src/Extensions/: CMakeLists.txt
src/Interfaces/: CMakeLists.txt
src/Interfaces/ESMX/: CMakeLists.txt  HCOI_ESMXGridCompMod.F90  HCOI_ESMXInterfaceMod.F90
src/Interfaces/NUOPC/: CMakeLists.txt  HCOI_NUOPCGridCompMod.F90  HCOI_NUOPCStandaloneDriverMod.F90  hcoi_esmf_mod.F90  hcoi_esmf_nuopc_mod.F90  hemco_nuopc_main.F90  hemco_nuopc_standalone.F90
src/Interfaces/Shared/: CMakeLists.txt
src/Shared/GeosUtil/: CMakeLists.txt
src/Shared/Headers/: CMakeLists.txt  hco_inquireMod.F90
src/Shared/NcdfUtil/: CMakeLists.txt
src/Tests/: CMakeLists.txt  hco_esmf_read_test.F90  hco_nexus_test.F90
